--- a/streaming-platform/package.json
+++ b/streaming-platform/package.json
@@ -12,6 +12,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
