Added Create Show and fetch seasons

--- a/streaming-platform/.env
+++ b/streaming-platform/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_MOVIEDB_URL = https://api.themoviedb.org/3/authentication
 REACT_APP_API_MOVIEDB_KEY = 50022ff832a17d9e76bc5df616f3c5da
+REACT_APP_ASSETS_URL = https://localhost:8080
