--- a/streaming-platform-api/package.json
+++ b/streaming-platform-api/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "devDependencies": {
     "prisma": "^5.19.1"
